deploy: 219eb482ad9f259c57870d3aa92c0a469eeeaa4e

--- a/current/src/serenity/model/guild/guild_id.rs.html
+++ b/current/src/serenity/model/guild/guild_id.rs.html
@@ -1349,7 +1349,7 @@
 
     <span class="doccomment">/// Streams over all the members in a guild.</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// This is accomplished and equivilent to repeated calls to [`members`].</span>
+    <span class="doccomment">/// This is accomplished and equivalent to repeated calls to [`members`].</span>
     <span class="doccomment">/// A buffer of at most 1,000 members is used to reduce the number of calls</span>
     <span class="doccomment">/// necessary.</span>
     <span class="doccomment">///</span>
@@ -1678,7 +1678,7 @@
 
     <span class="doccomment">/// Streams over all the members in a guild.</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// This is accomplished and equivilent to repeated calls to [`members`].</span>
+    <span class="doccomment">/// This is accomplished and equivalent to repeated calls to [`members`].</span>
     <span class="doccomment">/// A buffer of at most 1,000 members is used to reduce the number of calls</span>
     <span class="doccomment">/// necessary.</span>
     <span class="doccomment">///</span>
