--- a/current/serenity/model/id/struct.GuildId.html
+++ b/current/serenity/model/id/struct.GuildId.html
@@ -118,7 +118,7 @@ Minimum value is 1, maximum and default value is 1000.
 <br>
 Optionally pass in <code>after</code> to offset the results by a <a href="../user/struct.User.html"><code>User</code></a>'s Id.</p>
 </div><h4 id="method.members_iter" class="method"><code>pub fn <a href="#method.members_iter" class="fnname">members_iter</a>&lt;H:&nbsp;<a class="trait" href="https://doc.rust-lang.org/nightly/core/convert/trait.AsRef.html" title="trait core::convert::AsRef">AsRef</a>&lt;<a class="struct" href="../../../serenity/http/client/struct.Http.html" title="struct serenity::http::client::Http">Http</a>&gt;&gt;(<br>&nbsp;&nbsp;&nbsp;&nbsp;self, <br>&nbsp;&nbsp;&nbsp;&nbsp;http: H<br>) -&gt; impl <a class="trait" href="https://docs.rs/futures-core/0.3.8/futures_core/stream/trait.Stream.html" title="trait futures_core::stream::Stream">Stream</a>&lt;Item = <a class="type" href="../../../serenity/type.Result.html" title="type serenity::Result">Result</a>&lt;<a class="struct" href="../../../serenity/model/guild/struct.Member.html" title="struct serenity::model::guild::Member">Member</a>&gt;&gt;</code><a class="srclink" href="../../../src/serenity/model/guild/guild_id.rs.html#518-520" title="goto source code">[src]</a></h4><div class="docblock"><p>Streams over all the members in a guild.</p>
-<p>This is accomplished and equivilent to repeated calls to <a href="../../../serenity/model/id/struct.GuildId.html#method.members"><code>members</code></a>.
+<p>This is accomplished and equivalent to repeated calls to <a href="../../../serenity/model/id/struct.GuildId.html#method.members"><code>members</code></a>.
 A buffer of at most 1,000 members is used to reduce the number of calls
 necessary.</p>
 <h1 id="examples-6" class="section-header"><a href="#examples-6">Examples</a></h1>
