deploy: 03a1f97a40c00bf5d8551a6036c58263fd86dc07

--- a/current/src/serenity/model/channel/channel_id.rs.html
+++ b/current/src/serenity/model/channel/channel_id.rs.html
@@ -1286,7 +1286,7 @@
     <span class="doccomment">/// A buffer of at most 100 messages is used to reduce the number of calls.</span>
     <span class="doccomment">/// necessary.</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// The stream returns the oldest message first, followed by newer messages.</span>
+    <span class="doccomment">/// The stream returns the newest message first, followed by older messages.</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// # Examples</span>
     <span class="doccomment">///</span>
