deploy: a27d7bb43977da0f4d10f3405b12e07d56cf9a74

--- a/current/serenity/prelude/index.html
+++ b/current/serenity/prelude/index.html
@@ -17,7 +17,7 @@ helps with dealing with the current &quot;context&quot; of the event dispatch.
 The context also acts as a general high-level interface over the associated
 <a href="../../serenity/gateway/struct.Shard.html"><code>Shard</code></a> which received the event, or the low-level <a href="../../serenity/http/index.html"><code>http</code></a> module.</p>
 </td></tr><tr class="module-item"><td><a class="struct" href="struct.Mutex.html" title="serenity::prelude::Mutex struct">Mutex</a></td><td class="docblock-short"><p>An asynchronous <code>Mutex</code>-like type.</p>
-</td></tr><tr class="module-item"><td><a class="struct" href="struct.RwLock.html" title="serenity::prelude::RwLock struct">RwLock</a></td><td class="docblock-short"><p>An asynchronous reader-writer lock</p>
+</td></tr><tr class="module-item"><td><a class="struct" href="struct.RwLock.html" title="serenity::prelude::RwLock struct">RwLock</a></td><td class="docblock-short"><p>An asynchronous reader-writer lock.</p>
 </td></tr><tr class="module-item"><td><a class="struct" href="struct.TypeMap.html" title="serenity::prelude::TypeMap struct">TypeMap</a></td><td class="docblock-short"><p>TypeMap is a simple abstraction around the standard library's <a href="https://doc.rust-lang.org/nightly/std/collections/hash/map/struct.HashMap.html"><code>HashMap</code></a>
 type, where types are its keys. This allows for statically-checked value
 retrieval.</p>
