--- a/current/serenity/model/interactions/struct.ApplicationCommandInteractionDataOption.html
+++ b/current/serenity/model/interactions/struct.ApplicationCommandInteractionDataOption.html
@@ -5,7 +5,7 @@
     pub name: <a class="struct" href="https://doc.rust-lang.org/nightly/alloc/string/struct.String.html" title="struct alloc::string::String">String</a>,
     pub value: <a class="enum" href="https://doc.rust-lang.org/nightly/core/option/enum.Option.html" title="enum core::option::Option">Option</a>&lt;<a class="enum" href="https://docs.rs/serde_json/1.0.61/serde_json/value/enum.Value.html" title="enum serde_json::value::Value">Value</a>&gt;,
     pub options: <a class="struct" href="https://doc.rust-lang.org/nightly/alloc/vec/struct.Vec.html" title="struct alloc::vec::Vec">Vec</a>&lt;<a class="struct" href="../../../serenity/model/interactions/struct.ApplicationCommandInteractionDataOption.html" title="struct serenity::model::interactions::ApplicationCommandInteractionDataOption">ApplicationCommandInteractionDataOption</a>&gt;,
-}</pre></div><div class="docblock"><p>A set of a parameter and a value from the user.</p>
+}</pre></div><div class="item-info"><div class="stab portability">This is supported on <strong>crate feature <code>unstable_discord_api</code></strong> only.</div></div><div class="docblock"><p>A set of a parameter and a value from the user.</p>
 <p>All options have names and an option can either be a parameter and input <code>value</code> or it can denote a sub-command or group, in which case it will contain a
 top-level key and another vector of <code>options</code>.</p>
 </div><h2 id="fields" class="fields small-section-header">
