--- a/current/serenity/model/interactions/struct.Interaction.html
+++ b/current/serenity/model/interactions/struct.Interaction.html
@@ -10,7 +10,7 @@
     pub member: <a class="struct" href="../../../serenity/model/guild/struct.Member.html" title="struct serenity::model::guild::Member">Member</a>,
     pub token: <a class="struct" href="https://doc.rust-lang.org/nightly/alloc/string/struct.String.html" title="struct alloc::string::String">String</a>,
     pub version: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.u8.html">u8</a>,
-}</pre></div><div class="docblock"><p>Information about an interaction.</p>
+}</pre></div><div class="item-info"><div class="stab portability">This is supported on <strong>crate feature <code>unstable_discord_api</code></strong> only.</div></div><div class="docblock"><p>Information about an interaction.</p>
 <p>An interaction is sent when a user invokes a slash command and is the same
 for slash commands and other future interaction types.</p>
 </div><h2 id="fields" class="fields small-section-header">
