deploy: abe955f72d21c67fca78f2732a7841402560bb71

--- a/current/src/serenity/builder/create_channel.rs.html
+++ b/current/src/serenity/builder/create_channel.rs.html
@@ -273,7 +273,7 @@
     <span class="doccomment">/// use serenity::model::id::UserId;</span>
     <span class="doccomment">/// use serenity::model::permissions::Permissions;</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// // Assuming a guild have already been bound.</span>
+    <span class="doccomment">/// // Assuming a guild has already been bound.</span>
     <span class="doccomment">/// let permissions = Some(PermissionOverwrite {</span>
     <span class="doccomment">///     allow: Permissions::READ_MESSAGES,</span>
     <span class="doccomment">///     deny: Permissions::SEND_TTS_MESSAGES,</span>
