--- a/next/src/serenity/builder/create_channel.rs.html
+++ b/next/src/serenity/builder/create_channel.rs.html
@@ -273,7 +273,7 @@
     <span class="doccomment">/// use serenity::model::id::UserId;</span>
     <span class="doccomment">/// use serenity::model::permissions::Permissions;</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// // Assuming a guild have already been bound.</span>
+    <span class="doccomment">/// // Assuming a guild has already been bound.</span>
     <span class="doccomment">/// let permissions = Some(PermissionOverwrite {</span>
     <span class="doccomment">///     allow: Permissions::READ_MESSAGES,</span>
     <span class="doccomment">///     deny: Permissions::SEND_TTS_MESSAGES,</span>
