--- a/current/serenity/framework/standard/macros/index.html
+++ b/current/serenity/framework/standard/macros/index.html
@@ -8,5 +8,7 @@
 </td></tr><tr class="module-item"><td><a class="attr" href="attr.help.html" title="serenity::framework::standard::macros::help attr">help</a></td><td class="docblock-short"><p>A brother macro to <a href="../../../../serenity/framework/standard/macros/attr.command.html"><code>command</code></a>, but for the help command.
 An interface for simple browsing of all the available commands the bot provides,
 and reading through specific information regarding a command.</p>
-</td></tr><tr class="module-item"><td><a class="attr" href="attr.hook.html" title="serenity::framework::standard::macros::hook attr">hook</a></td><td class="docblock-short"></td></tr></table></section><section id="search" class="content hidden"></section><section class="footer"></section><div id="rustdoc-vars" data-root-path="../../../../" data-current-crate="serenity" data-search-js="../../../../search-index.js"></div>
+</td></tr><tr class="module-item"><td><a class="attr" href="attr.hook.html" title="serenity::framework::standard::macros::hook attr">hook</a></td><td class="docblock-short"><p>A macro that transforms <code>async</code> functions (and closures) into plain functions, whose
+return type is a boxed <a href="https://doc.rust-lang.org/nightly/core/future/future/trait.Future.html"><code>Future</code></a>.</p>
+</td></tr></table></section><section id="search" class="content hidden"></section><section class="footer"></section><div id="rustdoc-vars" data-root-path="../../../../" data-current-crate="serenity" data-search-js="../../../../search-index.js"></div>
     <script src="../../../../main.js"></script></body></html>
