--- a/current/serenity/index.html
+++ b/current/serenity/index.html
@@ -36,7 +36,7 @@ as event handlers. Dispatching events to configured handlers and starting
 the shards’ connections are handled directly via the client. In addition,
 the <code>http</code> module and <code>Cache</code> are also automatically handled by the
 Client module for you.</p>
-</div><div class="item-left module-item"><a class="mod" href="collector/index.html" title="serenity::collector mod">collector</a></div><div class="item-right docblock-short"><span class="stab portability" title="This is supported on crate feature `collector` only"><code>collector</code></span><p>Collectors will receive events from the contextual shard, check if the
+</div><div class="item-left module-item"><a class="mod" href="collector/index.html" title="serenity::collector mod">collector</a><span class="stab portability" title="This is supported on crate feature `collector` only"><code>collector</code></span></div><div class="item-right docblock-short"><p>Collectors will receive events from the contextual shard, check if the
 filter lets them pass, and collects if the receive, collect, or time limits
 are not reached yet.</p>
 </div><div class="item-left module-item"><a class="mod" href="constants/index.html" title="serenity::constants mod">constants</a></div><div class="item-right docblock-short"><p>A set of constants used by the library.</p>
