--- a/next/serenity/client/struct.ClientBuilder.html
+++ b/next/serenity/client/struct.ClientBuilder.html
@@ -76,8 +76,8 @@ bot shall receive. Carefully picking the needed intents greatly helps
 the bot to scale, as less intents will result in less events to be
 received hence less processed by the bot.</p>
 <h5 id="privileged-intents"><a href="#privileged-intents">Privileged Intents</a></h5>
-<p>The intents <a href="../model/gateway/struct.GatewayIntents.html#associatedconstant.GUILD_PRESENCES" title="GatewayIntents::GUILD_PRESENCES"><code>GatewayIntents::GUILD_PRESENCES</code></a> and <a href="../model/gateway/struct.GatewayIntents.html#associatedconstant.GUILD_MEMBERS" title="GatewayIntents::GUILD_MEMBERS"><code>GatewayIntents::GUILD_MEMBERS</code></a>
-are <em>privileged</em>.
+<p>The intents <a href="../model/gateway/struct.GatewayIntents.html#associatedconstant.GUILD_PRESENCES" title="GatewayIntents::GUILD_PRESENCES"><code>GatewayIntents::GUILD_PRESENCES</code></a>, <a href="../model/gateway/struct.GatewayIntents.html#associatedconstant.GUILD_MEMBERS" title="GatewayIntents::GUILD_MEMBERS"><code>GatewayIntents::GUILD_MEMBERS</code></a>
+and <a href="../model/gateway/struct.GatewayIntents.html#associatedconstant.MESSAGE_CONTENT" title="GatewayIntents::MESSAGE_CONTENT"><code>GatewayIntents::MESSAGE_CONTENT</code></a> are <em>privileged</em>.
 <a href="https://discord.com/developers/docs/topics/gateway#privileged-intents">Privileged intents</a> need to be enabled in the <em>developer portal</em>.
 Once the bot is in 100 guilds or more, <a href="https://support.discord.com/hc/en-us/articles/360040720412-Bot-Verification-and-Data-Whitelisting">the bot must be verified</a> in
 order to use privileged intents.</p>
