--- a/next/src/serenity/client/mod.rs.html
+++ b/next/src/serenity/client/mod.rs.html
@@ -1329,8 +1329,8 @@
     <span class="doccomment">///</span>
     <span class="doccomment">/// # Privileged Intents</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// The intents [`GatewayIntents::GUILD_PRESENCES`] and [`GatewayIntents::GUILD_MEMBERS`]</span>
-    <span class="doccomment">/// are *privileged*.</span>
+    <span class="doccomment">/// The intents [`GatewayIntents::GUILD_PRESENCES`], [`GatewayIntents::GUILD_MEMBERS`]</span>
+    <span class="doccomment">/// and [`GatewayIntents::MESSAGE_CONTENT`] are *privileged*.</span>
     <span class="doccomment">/// [Privileged intents] need to be enabled in the *developer portal*.</span>
     <span class="doccomment">/// Once the bot is in 100 guilds or more, [the bot must be verified] in</span>
     <span class="doccomment">/// order to use privileged intents.</span>
