deploy: a8b8b15c08ec16df29b70a098e99d4b115ab903b

--- a/next/src/serenity/http/ratelimiting.rs.html
+++ b/next/src/serenity/http/ratelimiting.rs.html
@@ -484,26 +484,26 @@
 <span class="doccomment">//! &gt; account when generating rate limits since it&#39;s the major parameter. The</span>
 <span class="doccomment">//! only current major parameters are `channel_id`, `guild_id` and `webhook_id`.</span>
 <span class="doccomment">//!</span>
-<span class="doccomment">//! This results in the two URIs of `GET /channels/4/messages/7` and</span>
+<span class="doccomment">//! This results in the two URLs of `GET /channels/4/messages/7` and</span>
 <span class="doccomment">//! `GET /channels/5/messages/8` being rate limited _separately_. However, the</span>
-<span class="doccomment">//! two URIs of `GET /channels/10/messages/11` and</span>
+<span class="doccomment">//! two URLs of `GET /channels/10/messages/11` and</span>
 <span class="doccomment">//! `GET /channels/10/messages/12` will count towards the &quot;same ratelimit&quot;, as</span>
-<span class="doccomment">//! the major parameter - `10` is equivalent in both URIs&#39; format.</span>
+<span class="doccomment">//! the major parameter - `10` is equivalent in both URLs&#39; format.</span>
 <span class="doccomment">//!</span>
 <span class="doccomment">//! # Examples</span>
 <span class="doccomment">//!</span>
-<span class="doccomment">//! First: taking the first two URIs - `GET /channels/4/messages/7` and</span>
+<span class="doccomment">//! First: taking the first two URLs - `GET /channels/4/messages/7` and</span>
 <span class="doccomment">//! `GET /channels/5/messages/8` - and assuming both buckets have a `limit` of</span>
-<span class="doccomment">//! `10`, requesting the first URI will result in the response containing a</span>
+<span class="doccomment">//! `10`, requesting the first URL will result in the response containing a</span>
 <span class="doccomment">//! `remaining` of `9`. Immediately after - prior to buckets resetting -</span>
-<span class="doccomment">//! performing a request to the _second_ URI will also contain a `remaining` of</span>
+<span class="doccomment">//! performing a request to the _second_ URL will also contain a `remaining` of</span>
 <span class="doccomment">//! `9` in the response, as the major parameter - `channel_id` - is different</span>
 <span class="doccomment">//! in the two requests (`4` and `5`).</span>
 <span class="doccomment">//!</span>
-<span class="doccomment">//! Second: take for example the last two URIs. Assuming the bucket&#39;s `limit` is</span>
-<span class="doccomment">//! `10`, requesting the first URI will return a `remaining` of `9` in the</span>
+<span class="doccomment">//! Second: take for example the last two URLs. Assuming the bucket&#39;s `limit` is</span>
+<span class="doccomment">//! `10`, requesting the first URL will return a `remaining` of `9` in the</span>
 <span class="doccomment">//! response. Immediately after - prior to buckets resetting - performing a</span>
-<span class="doccomment">//! request to the _second_ URI will return a `remaining` of `8` in the</span>
+<span class="doccomment">//! request to the _second_ URL will return a `remaining` of `8` in the</span>
 <span class="doccomment">//! response, as the major parameter - `channel_id` - is equivalent for the two</span>
 <span class="doccomment">//! requests (`10`).</span>
 <span class="doccomment">//!</span>
