--- a/next/serenity/http/ratelimiting/index.html
+++ b/next/serenity/http/ratelimiting/index.html
@@ -15,23 +15,23 @@ For example, <code>/channels/:channel_id</code> and
 account when generating rate limits since it’s the major parameter. The
 only current major parameters are <code>channel_id</code>, <code>guild_id</code> and <code>webhook_id</code>.</p>
 </blockquote>
-<p>This results in the two URIs of <code>GET /channels/4/messages/7</code> and
+<p>This results in the two URLs of <code>GET /channels/4/messages/7</code> and
 <code>GET /channels/5/messages/8</code> being rate limited <em>separately</em>. However, the
-two URIs of <code>GET /channels/10/messages/11</code> and
+two URLs of <code>GET /channels/10/messages/11</code> and
 <code>GET /channels/10/messages/12</code> will count towards the “same ratelimit”, as
-the major parameter - <code>10</code> is equivalent in both URIs’ format.</p>
+the major parameter - <code>10</code> is equivalent in both URLs’ format.</p>
 <h2 id="examples"><a href="#examples">Examples</a></h2>
-<p>First: taking the first two URIs - <code>GET /channels/4/messages/7</code> and
+<p>First: taking the first two URLs - <code>GET /channels/4/messages/7</code> and
 <code>GET /channels/5/messages/8</code> - and assuming both buckets have a <code>limit</code> of
-<code>10</code>, requesting the first URI will result in the response containing a
+<code>10</code>, requesting the first URL will result in the response containing a
 <code>remaining</code> of <code>9</code>. Immediately after - prior to buckets resetting -
-performing a request to the <em>second</em> URI will also contain a <code>remaining</code> of
+performing a request to the <em>second</em> URL will also contain a <code>remaining</code> of
 <code>9</code> in the response, as the major parameter - <code>channel_id</code> - is different
 in the two requests (<code>4</code> and <code>5</code>).</p>
-<p>Second: take for example the last two URIs. Assuming the bucket’s <code>limit</code> is
-<code>10</code>, requesting the first URI will return a <code>remaining</code> of <code>9</code> in the
+<p>Second: take for example the last two URLs. Assuming the bucket’s <code>limit</code> is
+<code>10</code>, requesting the first URL will return a <code>remaining</code> of <code>9</code> in the
 response. Immediately after - prior to buckets resetting - performing a
-request to the <em>second</em> URI will return a <code>remaining</code> of <code>8</code> in the
+request to the <em>second</em> URL will return a <code>remaining</code> of <code>8</code> in the
 response, as the major parameter - <code>channel_id</code> - is equivalent for the two
 requests (<code>10</code>).</p>
 <p>Major parameters are why some variants (i.e. all of the channel/guild
